--- a/client/src/components/Tracking/ProgressBox.css
+++ b/client/src/components/Tracking/ProgressBox.css
@@ -1,13 +1,41 @@
-.content {
+
+.stu{
+    border: 3px solid black;
+    width: 300px;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 6px;
+    background: radial-gradient(circle at 18.7% 37.8%, rgb(250, 250, 250) 0%, rgb(225, 234, 238) 90%);;
+
+}
+
+
+.Gui{
+    border: 3px solid black;
+    width: 300px;
+    padding: 10px;
+    margin-bottom: 10px;
+    background: radial-gradient(circle at 18.7% 37.8%, rgb(250, 250, 250) 0%, rgb(225, 234, 238) 90%);;
+    border-radius: 6px;
+}
+
+
+
+.text{
+    border-radius: 6px;
+    border: 3px solid black;
+    width: 300px;
+    padding: 10px;
+    margin-bottom: 20px;
+    background: radial-gradient(circle at 18.7% 37.8%, rgb(250, 250, 250) 0%, rgb(225, 234, 238) 90%);
+    margin-left: 189.5px;
+
+}
+
+
+.stu-gui {
     display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.participants {
-    width: 250px;
-}
-
-.main {
-    width: 1000px;
+    justify-content: center; /* Horizontally center items */
+    flex-direction: column;
+    align-items: center; /* Vertically center items */
 }
