--- a/client/src/components/Body/index.css
+++ b/client/src/components/Body/index.css
@@ -1,6 +1,5 @@
 
 
-
 .projects {
     margin-top: -50px; /* Adjust this value as needed */
   }
@@ -61,10 +60,10 @@
   }
 
   .chart {
-    border: 1px solid black;
+    box-shadow: 0 0 12px rgba(0, 0, 0, 0.5); 
     border-radius: 10px;
-    height: 600px;
-
+    height: 630px;
+    padding: 15px;
 
   }
 
