--- a/client/src/components/Insert/Insert.css
+++ b/client/src/components/Insert/Insert.css
@@ -1,22 +1,4 @@
-/* Insert.css */
-/* Insert.css */
-.insert-container {
-  /* background-color: rgba(210, 214, 216, 0.8); */
-  padding: 60px;
-  border-radius: 10px;
-  width: 50%;
-  
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add box shadow for depth */
- 
-  
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-top: 190px;
-  transform: translate(-50%, -50%);
-  border: 1px solid black;
-  
-}
+
 
   .form-label {
     color: #000000;
@@ -26,10 +8,9 @@
   .input-field {
     margin-bottom: 10px;
     padding: 8px;
-    border: 1px solid #161313;
-    border-radius: 5px;
+    border-radius: 10px;
     width: 100%;
-  }
+    box-shadow: 0 0 12px rgba(0, 0, 0, 0.4);   }
   
   .add-button {
     margin-top: 10px;
@@ -84,5 +65,41 @@
   .dropdown-input option:hover {
     background-color: #007bff;
     color: #fff;
+  }
+  
+
+  
+  .total {
+    display: flex;
+
+  }
+  
+  .sideimg {
+    width: 60%;
+    /* Add any other styles as needed */
+    background-image: url(Library.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    box-shadow: 0 0px 12px rgba(0, 0, 0, 0.5);
+    padding: 20px;
+    border-radius: 20px;
+
+
+  }
+  
+  .insert-container {
+    padding: 60px;
+    border-radius: 10px;
+    width: 40%;
+    background-image: url(form3.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    box-shadow: 0 0px 12px rgba(0, 0, 0, 0.5);
+
+    /* margin-top: 70px; */
+    margin-left: auto; /* Push the container to the right */
+    position: relative; /* Add position relative */
   }
   
