--- a/client/src/components/Tracking/ProgressBox.css
+++ b/client/src/components/Tracking/ProgressBox.css
@@ -1,9 +1,9 @@
 
 .stu{
-    border: 3px solid black;
     width: 300px;
     padding: 10px;
     margin-bottom: 10px;
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.5); /* Increase shadow on hover */
     border-radius: 6px;
     background: radial-gradient(circle at 18.7% 37.8%, rgb(250, 250, 250) 0%, rgb(225, 234, 238) 90%);;
 
@@ -11,31 +11,27 @@
 
 
 .Gui{
-    border: 3px solid black;
     width: 300px;
     padding: 10px;
     margin-bottom: 10px;
     background: radial-gradient(circle at 18.7% 37.8%, rgb(250, 250, 250) 0%, rgb(225, 234, 238) 90%);;
     border-radius: 6px;
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.5); /* Increase shadow on hover */
+
 }
 
 
 
 .text{
     border-radius: 6px;
-    border: 3px solid black;
     width: 300px;
     padding: 10px;
     margin-bottom: 20px;
     background: radial-gradient(circle at 18.7% 37.8%, rgb(250, 250, 250) 0%, rgb(225, 234, 238) 90%);
-    margin-left: 189.5px;
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.5); /* Increase shadow on hover */
+
 
 }
 
 
-.stu-gui {
-    display: flex;
-    justify-content: center; /* Horizontally center items */
-    flex-direction: column;
-    align-items: center; /* Vertically center items */
-}
+
